Finished tasks from "Oppgave 0"

--- a/Oppgave 0/index.html
+++ b/Oppgave 0/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Øvingsoppgaver JS</title>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
