--- a/Oppgave 4/index.html
+++ b/Oppgave 4/index.html
@@ -12,8 +12,15 @@
 <body>
     <main id="main">
         <p id="desc">Sorter etter minste først</p>
-        <ul id="guess"></ul>
-        <ul id="numbers"></ul>
+        <ul id="guess">
+            <!-- <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li> -->
+        </ul>
+        <ul id="numbers">
+
+        </ul>
         <button type="button">Ok</button>
     </main>
     
